[package]
name = "screen_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "libloaderapi"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
panic = "abort"